force-app/main/default/objects/Agents__c/Agents__c.object-meta.xml
<CustomObject>
    <label>Consultants</label>
    <nameField>
        <label>Consultant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consultants</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>