force-app/main/default/objects/Agents__c/fields/Agency_Active__c.field-meta.xml
<CustomField>
    <fullName>Agency_Active__c</fullName>
    <formula>Owner:User.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Active</label>
    <type>Checkbox</type>
</CustomField>