force-app/main/default/objects/Agents__c/fields/Agency_Profile__c.field-meta.xml
<CustomField>
    <fullName>Agency_Profile__c</fullName>
    <formula>$User.ProfileId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Profile</label>
    <type>Text</type>
</CustomField>