force-app/main/default/objects/Agents__c/fields/LinkedAccount__c.field-meta.xml
<CustomField>
    <fullName>LinkedAccount__c</fullName>
    <formula>Owner:User.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LinkedAcount</label>
    <type>Text</type>
</CustomField>