force-app/main/default/objects/Agents__c/listViews/AllMy.listView-meta.xml
<ListView>
    <fullName>AllMy</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Email_address__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LinkedAccount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>